libs/pavex_macros/tests/error_handler/fail/no_inputs.rs
use pavex_macros::error_handler;

#[error_handler]
pub fn handler() -> pavex::response::Response {
    todo!()
}

fn main() {}
